# example

./: CMakeLists.txt  README.MD
include/: BobDylan.h  JohnLennon.h  MusicTape.h  TapeWrapper.h  TheRollingStones.h
src/: BobDylan.cpp  JohnLennon.cpp  MusicTape.cpp  TheRollingStones.cpp  main.cpp
